# AnaLightics

./: .env.example  .env.test.example  .gitignore  README.md  docker-compose.test.yaml  docker-compose.yaml
backend/: Dockerfile  init_db.py  pyproject.toml
backend/api/: config.py  exceptions.py  logging_config.py  main.py  model.py  rate_limit.py  requirements.txt
backend/consumer/: main.py
backend/db/: init_db.py  postgres.py
backend/model/: auth.py  config.py  schemas.py
backend/repositories/: projects.py
backend/tests/: conftest.py  test_auth.py  test_consumer_helpers.py  test_event_schema.py  test_init_db_helpers.py  test_rate_limit.py
backend/tests/api/: test_track_api.py
backend/tests/integration/: conftest.py  test_project_repository.py
backend/tests/unit/: test_api_errors.py  test_api_key_rotation.py  test_consumer_helpers.py  test_event_schema.py  test_init_db_helpers.py  test_logging_config.py  test_rate_limit.py
infra/: docker-compose.yaml
