[project]
name = "analightics-backend"
version = "0.1.0"
description = "HighLoad Analytics System"
authors = [
    {name = "Daniil Tupyakov",email = "tupyakov.daniil@gmail.com"}
]
readme = "README.md"
requires-python = "3.10.7"
dependencies = [
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.7,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]
api = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "aiokafka (>=0.13.0,<0.14.0)"
]
consumer = [
    "clickhouse-connect (>=0.14.1,<0.15.0)",
    "aiokafka (>=0.13.0,<0.14.0)"
]
init_db = [
    "clickhouse-connect (>=0.14.1,<0.15.0)"
]

[tool.poetry]
package-mode = false
